# marimo-databricks-connect

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
databricks_app/: README.md  app.yaml  requirements.txt
marimo_databricks_connect/: __init__.py  _acl_widget.py  _acl_widget_frontend.js  _ai.py  _ai_proxy.py  _app_widget.py  _app_widget_frontend.js  _cluster_widget.py  _cluster_widget_frontend.js  _compute.py  _compute_frontend.js  _engine.py  _external_location_widget.py  _external_location_widget_frontend.js  _filter.py  _fs.py  _genie_widget.py  _genie_widget_frontend.js  _job_widget.py  _job_widget_frontend.js  _obo.py  _ops_common.py  _ops_common_frontend.js  _pipeline_widget.py  _pipeline_widget_frontend.js  _pipelines.py  _pipelines_frontend.js  _principal_widget.py  _principal_widget_frontend.js  _schema_widget.py  _schema_widget_frontend.js  _secret_scope_widget.py  _secret_scope_widget_frontend.js  _selectors.py  _selectors_frontend.js  _serving_endpoint_widget.py  _serving_endpoint_widget_frontend.js  _streaming_formatter.py  _table_widget.py  _table_widget_frontend.js  (+14 more)
marimo_databricks_connect/app/: __init__.py  __main__.py  auth.py  server.py  templates.py
notebooks/: demo.py
tests/: test_acl_widget.py  test_ai.py  test_app_server.py  test_compute.py  test_marimo_databricks_connect.py  test_ops_widgets.py  test_pipelines.py  test_principal_widget.py  test_selectors.py  test_workflows.py  test_workspace.py
